build/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - blog.brigzzy.org
    secretName: letsencrypt-prod
  rules:
  - host: blog.brigzzy.org
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
